...
    return GestureDetector(
      onTap: _onScaffoldTap,
      child: Scaffold(
        appBar: AppBar(
          centerTitle: true,
          title: const Text(
            "Sign up",
          ),
        ),
        body: Center(
          child: Container(
            constraints: const BoxConstraints(
              maxWidth: Breakpoints.lg,
...
                  ),
                  Gaps.v16,
                  GestureDetector(
                    onTap: _onNextTap,
                    child: FormButton(
                      disabled: _username.isEmpty,
                      formText: "Next",
                    ),
                  ),
                ],
              ),
            ),
          ),
...
